# smart_ticket

./: .env.example  .gitignore  app.py  pyproject.toml
smart_ticket/: api_client.py  app.py  async_client.py  config.py
tests/: test_api_client.py  test_async_client.py
