[project]
name = "smart-ticket"
version = "0.1.0"
description = ""
authors = [
    {name = "TonyLeeeeee",email = "litao406588859@gmail.com"}
]
packages = [{ include = "smart_ticket" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=6.1.0,<7.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "async-limiter (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
ruff = "^0.11.11"
black = "^25.1.0"
respx = "^0.22"
pytest-httpx = "^0.35.0"
pytest-mock = "^3.14.0"

